Fix lightbox popin on mobile.

--- a/static/css/lightbox.css
+++ b/static/css/lightbox.css
@@ -98,6 +98,13 @@
     height: 100%;
     border: none;
 }
+@media screen and (max-width: 768px) {
+   #lightbox .apple.audioWrapperContainer,
+   #lightbox .spotify.audioWrapperContainer {
+        width: 90%;
+   }
+
+}
 
 #lightbox #prev, #lightbox #next {height: 50px; line-height: 36px; display: none; margin-top: -25px; position: fixed; top: 50%; padding: 0 15px; cursor: pointer; text-decoration: none; z-index: 99; color: white; font-size: 60px;}
 #lightbox.gallery #prev, #lightbox.gallery #next {display: block;}
